Finished up setting up redis for distributed caching